--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Project158"
+        android:theme="@style/Theme.ProjectWeather"
         tools:targetApi="31">
         <activity
             android:name=".Activitis.FutureActivity"
